# openvins_slg

./: .gitignore  README.md
config/euroc_mav/: estimator_config_klt.yaml  estimator_config_slg.yaml
ov_lightglue/: CMakeLists.txt  package.xml
ov_lightglue/launch/: record.launch  serial.launch  serial_new.launch
ov_lightglue/src/: evaluate_estimator.cpp  evaluate_tracker.cpp  optimize_confidence.cpp  pose_to_file.cpp  ros1_serial_msckf_lightglue.cpp  track_metrics_plot.py
ov_lightglue/src/core/: VioManagerHelperSLG.cpp  VioManagerOptionsSLG.h  VioManagerSLG.cpp  VioManagerSLG.h
ov_lightglue/src/ros/: ROS1VisualizerSLG.cpp  ROS1VisualizerSLG.h
ov_lightglue/src/track/: TrackSuperLightGlue.cpp  TrackSuperLightGlue.h  TrackerSuperLightGlueConfig.cpp  TrackerSuperLightGlueConfig.h  slg_backend.cpp  slg_backend.h
ov_lightglue/tests/: onnxrt_check.cpp  slg_backend_smoke_test.cpp  slg_backend_smoke_test_hist.cpp  slg_backend_smoke_test_vis.cpp  track_fast_bag_to_mp4.cpp  track_metrics_plot.py  track_slg_smoke_test.cpp  track_superlightglue_bag_to_mp4.cpp
scripts/: estimator_euroc.sh  estimator_gopro10.sh  fetch_weights.sh
scripts/int_tests/: estimator_euroc_klt_v1_01_easy.sh  estimator_euroc_slg_v1_01_easy.sh  estimator_gopro10_klt.sh  estimator_gopro10_klt_first.sh  estimator_gopro10_slg.sh  estimator_gopro10_slg_first.sh
scripts/test/: _common.sh
scripts/unit_tests/: _common.sh  onnxrt_check.sh  slg_backend_smoke_test.sh  slg_backend_smoke_test_hist.sh  slg_backend_smoke_test_vis.sh  track_klt_bag_to_mp4.sh  track_slg_bag_to_mp4.sh  track_slg_smoke_test.sh
