<?xml version="1.0"?>
<package format="3">

  <name>ov_lightglue</name>
  <version>0.1.0</version>
  <description>
    OpenVINS extension package providing a SuperPoint + LightGlue tracker frontend.
  </description>

  <author email="gkigki111@gmail.com">drbright</author>
  <maintainer email="gkigki111@gmail.com">drbright</maintainer>

  <license>GNU General Public License v3.0</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">cmake_modules</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">rosbag</depend>
  <depend condition="$ROS_VERSION == 1">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 1">cv_bridge</depend>
  <depend condition="$ROS_VERSION == 1">ov_core</depend>
  <depend condition="$ROS_VERSION == 1">ov_init</depend>
  <depend condition="$ROS_VERSION == 1">ov_eval</depend>
  <depend condition="$ROS_VERSION == 1">ov_msckf</depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">cv_bridge</depend>
  <depend condition="$ROS_VERSION == 2">ov_core</depend>
  <depend condition="$ROS_VERSION == 2">ov_init</depend>
  <depend condition="$ROS_VERSION == 2">ov_eval</depend>

  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>boost</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
